Add build-docker.yml to generate docker image on ghcr.io. Generate a docker tag based on git short sha revision AND on current branch on push on branch. Generate a docker tag based on tag on push on tag. docker latest tag is always the latest tag (ignoring new docker images on revisions) The tag (or git revision) is displayed in the about box of the docker image if different from current source version (no impact on code not using those images).

--- a/packages/client/lib/style.css
+++ b/packages/client/lib/style.css
@@ -1685,7 +1685,7 @@ video {
     position: fixed;
     transition: .15s, visibility 0s .15s;
     transform: translate(-50%, -50%);
-    width: 300px;
+    width: 400px;
     text-align: center;
     z-index: 64;
 }
@@ -1713,7 +1713,7 @@ video {
     bottom: 0;
     font-size: .7em;
     margin-bottom: .2em;
-    width: 300px;
+    width: 100%;
     position: absolute;
 }
 
