--- a/packages/client/lib/templates/main.hbs
+++ b/packages/client/lib/templates/main.hbs
@@ -27,14 +27,18 @@
     </svg>Delete</a>
 </div>
 <div id="about-box">
-  <p id="about-title"></p>
+  <p id="about-title">droppy</p>
+  <p id="about-version"></p>
   <p id="about-engine"></p>
   <a id="about-fork" target="_blank" rel="noopener" href="https://github.com/silverwind/droppy">
     <svg class="github">
       <use xlink:href="#i-github">
     </svg><span>GitHub project page</span>
   </a>
-  <p id="about-copy">©<a href="https://github.com/silverwind" target="_blank" rel="noopener">silverwind</a></p>
+  <a id="about-website" target="_blank" rel="noopener" href="https://droppyjs.com">
+    <span>Website</span>
+  </a>
+  
 </div>
 <div id="prefs-box"></div>
 <div id="drop-select">
