--- a/packages/client/lib/templates/main.hbs
+++ b/packages/client/lib/templates/main.hbs
@@ -1,6 +1,6 @@
 <main></main>
 <div id="overlay"></div>
-<div id="entry-menu">
+<div id="entry-menu" aria-modal="true">
   <a class="play"><svg class="play">
       <use xlink:href="#i-play">
     </svg>Play</a>
@@ -26,7 +26,7 @@
       <use xlink:href="#i-trash">
     </svg>Delete</a>
 </div>
-<div id="about-box">
+<div id="about-box" aria-modal="true">
   <p id="about-title">droppy</p>
   <p id="about-version"></p>
   <p id="about-engine"></p>
@@ -40,8 +40,8 @@
   </a>
   
 </div>
-<div id="prefs-box"></div>
-<div id="drop-select">
+<div id="prefs-box" aria-modal="true"></div>
+<div id="drop-select" aria-modal="true">
   <span class="movefile">Move</span>
   <span class="copyfile">Copy</span>
   <span class="viewfile">View</span>
