--- a/packages/client/lib/style.css
+++ b/packages/client/lib/style.css
@@ -1782,6 +1782,19 @@ video {
   visibility: hidden;
 }
 
+#prefs-box button {
+  padding: 0 15px 0 15px;
+  margin: 2px;
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+#prefs-box button:hover {
+  background: #bbb;
+}
+
 #prefs-box.in {
   opacity: 1;
   visibility: visible;
