refactor: update URL

--- a/packages/client/lib/templates/main.hbs
+++ b/packages/client/lib/templates/main.hbs
@@ -30,7 +30,7 @@
   <p id="about-title">droppy</p>
   <p id="about-version"></p>
   <p id="about-engine"></p>
-  <a id="about-fork" target="_blank" rel="noopener" href="https://github.com/silverwind/droppy">
+  <a id="about-fork" target="_blank" rel="noopener" href="https://github.com/droppyjs/droppy">
     <svg class="github">
       <use xlink:href="#i-github">
     </svg><span>GitHub project page</span>
